@@ -1,19 +1,57 @@
 plugins {
     id 'java'
+    id 'application'
+}
+application {
+    mainClassName = 'jaid.Launcher'
+}
+task createRuntimeImage(type: Exec) {
+    dependsOn 'installDist'
+
+    def imageDir = file("$buildDir/jAid")
+    outputs.dir imageDir
+
+    doFirst {
+        imageDir.deleteDir()
+    }
+
+    commandLine 'jlink', '--module-path', "$buildDir/classes/java/launcher",
+            '--add-modules', 'java.base,jaid.launcher',
+            '--output', imageDir
+}
+sourceSets {
+    launcher {
+        java {
+            srcDirs = ['src/main/launcher']
+        }
+    }
+    util {
+        java {
+            srcDirs = ['src/main/util']
+        }
+    }
+    utilTest {
+        java {
+            srcDir 'src/test/util'
+        }
+        compileClasspath += sourceSets.util.output
+        runtimeClasspath += sourceSets.util.output
+    }
 }
 
 repositories {
     mavenCentral()
 }
 dependencies {
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'it.unimi.dsi:fastutil:8.5.12'
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation 'org.slf4j:slf4j-api:2.0.5'
-    implementation 'org.slf4j:log4j-over-slf4j:2.0.5'
+    utilImplementation  'org.apache.commons:commons-math3:3.6.1'
+    utilImplementation  'it.unimi.dsi:fastutil:8.5.12'
+    utilImplementation  'com.google.guava:guava:31.1-jre'
+    utilImplementation  'org.slf4j:slf4j-api:2.0.5'
+    utilImplementation  'org.slf4j:log4j-over-slf4j:2.0.5'
 
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.openjdk.jmh:jmh-core:1.37'
-    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
+    utilTestImplementation configurations.utilImplementation
+    utilTestImplementation 'org.assertj:assertj-core:3.24.2'
+    utilTestImplementation 'junit:junit:4.13.2'
+    utilTestImplementation 'org.openjdk.jmh:jmh-core:1.37'
+    utilTestImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
 }
